# Podcast-Knowledge-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deepen_instruction.md  docker-compose.yml  phase1_summary.md  phase2_summary.md  pyproject.toml
backend/: .env.example  fetch_huberman.py  ingest_batch.py  ingest_batch_1.py  ingest_batch_demo.py  main.py  requirements.txt  worker.py
backend/agents/: evaluator.py  graph.py  reranker.py  retrieval.py  state.py  synthesis.py
backend/etl/: asr.py  audio_store.py  diarize.py  embeddings.py  pipeline.py  podcast_registry.py  podcast_rss.py  splitter.py
backend/routers/: audio.py  chat.py  podcast.py  upload.py
backend/static/: index.html
chroma_data/: chroma.sqlite3
github_issues/: phase3-cross-encoder-reranking.md  phase4-multi-turn-conversation-memory.md  phase4.5-async-ingestion-containerization.md  phase5-multi-podcast-support.md  phase6-audio-timestamp-playback.md  phase7-hybrid-search-bm25-vector.md  phase8-semantic-chunking.md  phase9-topic-entity-extraction.md
