[project]
name = "podcast-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "ollama>=0.6.2",
    "pyannote-audio>=4.0.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]
