[project]
name = "podcast-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langgraph>=1.2.7",
    "ollama>=0.6.2",
    "pyannote-audio>=4.0.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]

[tool.ruff]
target-version = "py311"   # match requires-python in [project]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modernise Python syntax)
]
ignore = [
    "E501",  # line too long — ruff-format handles this
]
